Update files and normalize line endings

--- a/tutorials/BenchmarkPCC.ipynb
+++ b/tutorials/BenchmarkPCC.ipynb
@@ -103,15 +103,14 @@
     "    \n",
     "    if os.path.exists(os.path.join(data_path, 'CauTrigger_results_pcc_all.pickle')):\n",
     "        with open(os.path.join(data_path, \"CauTrigger_results_pcc_all.pickle\"), \"rb\") as file:\n",
-    "            CauTrigger_mse_dict, CauTrigger_pearsonr_dict = pickle.load(file)\n",
-    "        return CauTrigger_mse_dict, CauTrigger_pearsonr_dict\n",
+    "            CauTrigger_pearsonr_dict = pickle.load(file)\n",
+    "        return CauTrigger_pearsonr_dict\n",
     "\n",
     "\n",
     "    from CauTrigger.model import CauTrigger\n",
     "    from CauTrigger.utils import set_seed\n",
     "    down = nonTFs\n",
     "    down = np.concatenate([TFs, nonTFs])\n",
-    "    CauTrigger_mse_dict = {'single':[], 'combo_seen0':[], 'combo_seen1':[], 'combo_seen2':[]}\n",
     "    CauTrigger_pearsonr_dict = {'single':[], 'combo_seen0':[], 'combo_seen1':[], 'combo_seen2':[]}\n",
     "\n",
     "    norman_adata_TF = norman_adata[:, np.isin(norman_adata.var['gene_name'], TFs)]\n",
@@ -190,14 +189,10 @@
     "            pred_deg = pred_all.filter(down).mean(0)\n",
     "            truth_deg = truth_all.filter(down).mean(0)\n",
     "            ctrl_deg = ctrl.filter(down).mean(0)\n",
-    "            res_mse = mse(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
-    "                          truth_deg.values.flatten() - ctrl_deg.values.flatten())\n",
     "            res_pearsonr = pearsonr(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
     "                                    truth_deg.values.flatten() - ctrl_deg.values.flatten())[0]\n",
     "        else:\n",
-    "            res_mse = np.nan\n",
     "            res_pearsonr = np.nan\n",
-    "        CauTrigger_mse_dict['single'].append(res_mse)\n",
     "        CauTrigger_pearsonr_dict['single'].append(res_pearsonr)\n",
     "    for key in ['combo_seen0', 'combo_seen1', 'combo_seen2']:\n",
     "        for combo in train_test_dict[key]:\n",
@@ -227,18 +222,14 @@
     "                pred_deg = pred_all.filter(down).mean(0)\n",
     "                truth_deg = truth_all.filter(down).mean(0)\n",
     "                ctrl_deg = ctrl.filter(down).mean(0)\n",
-    "                res_mse = mse(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
-    "                              truth_deg.values.flatten() - ctrl_deg.values.flatten())\n",
     "                res_pearsonr = pearsonr(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
     "                                        truth_deg.values.flatten() - ctrl_deg.values.flatten())[0]\n",
     "            else:\n",
-    "                res_mse = np.nan\n",
     "                res_pearsonr = np.nan\n",
-    "            CauTrigger_mse_dict[key].append(res_mse)\n",
     "            CauTrigger_pearsonr_dict[key].append(res_pearsonr)\n",
     "    with open(os.path.join(data_path, \"CauTrigger_results_pcc_all.pickle\"), \"wb\") as file:\n",
-    "        pickle.dump((CauTrigger_mse_dict, CauTrigger_pearsonr_dict), file)\n",
-    "    return CauTrigger_mse_dict, CauTrigger_pearsonr_dict"
+    "        pickle.dump(CauTrigger_pearsonr_dict, file)\n",
+    "    return CauTrigger_pearsonr_dict"
    ]
   },
   {
@@ -276,11 +267,10 @@
     "    \n",
     "    if os.path.exists(os.path.join(data_path, 'GEARS_results_pcc_all.pickle')):\n",
     "        with open(os.path.join(data_path, \"GEARS_results_pcc_all.pickle\"), \"rb\") as file:\n",
-    "            GEARS_mse_dict, GEARS_pearsonr_dict = pickle.load(file)\n",
-    "        return GEARS_mse_dict, GEARS_pearsonr_dict\n",
+    "            GEARS_pearsonr_dict = pickle.load(file)\n",
+    "        return GEARS_pearsonr_dict\n",
     "\n",
     "    from gears import PertData, GEARS\n",
-    "    GEARS_mse_dict = {'single':[], 'combo_seen0':[], 'combo_seen1':[], 'combo_seen2':[]}\n",
     "    GEARS_pearsonr_dict = {'single':[], 'combo_seen0':[], 'combo_seen1':[], 'combo_seen2':[]}\n",
     "    down = nonTFs\n",
     "    down = np.concatenate([TFs, nonTFs])\n",
@@ -313,14 +303,10 @@
     "            pred_deg = pred.filter(down)\n",
     "            truth_deg = truth.filter(down)\n",
     "            ctrl_deg = ctrl.filter(down)\n",
-    "            res_mse = mse(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
-    "                          truth_deg.values.flatten() - ctrl_deg.values.flatten())\n",
     "            res_pearsonr = pearsonr(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
     "                                    truth_deg.values.flatten() - ctrl_deg.values.flatten())[0]\n",
     "        else:\n",
-    "            res_mse = np.nan\n",
     "            res_pearsonr = np.nan\n",
-    "        GEARS_mse_dict['single'].append(res_mse)\n",
     "        GEARS_pearsonr_dict['single'].append(res_pearsonr)\n",
     "    for key in ['combo_seen0', 'combo_seen1', 'combo_seen2']:\n",
     "        for combo in test_subgroup[key]:\n",
@@ -335,18 +321,15 @@
     "                pred_deg = pred.filter(down)\n",
     "                truth_deg = truth.filter(down)\n",
     "                ctrl_deg = ctrl.filter(down)\n",
-    "                res_mse = mse(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
-    "                              truth_deg.values.flatten() - ctrl_deg.values.flatten())\n",
     "                res_pearsonr = pearsonr(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
     "                                        truth_deg.values.flatten() - ctrl_deg.values.flatten())[0]\n",
     "            else:\n",
     "                res_mse = np.nan\n",
     "                res_pearsonr = np.nan\n",
-    "            GEARS_mse_dict[key].append(res_mse)\n",
     "            GEARS_pearsonr_dict[key].append(res_pearsonr)\n",
     "    with open(os.path.join(data_path, \"GEARS_results_pcc_all.pickle\"), \"wb\") as file:\n",
-    "        pickle.dump((GEARS_mse_dict, GEARS_pearsonr_dict), file)\n",
-    "    return GEARS_mse_dict, GEARS_pearsonr_dict"
+    "        pickle.dump(GEARS_pearsonr_dict, file)\n",
+    "    return GEARS_pearsonr_dict"
    ]
   },
   {
@@ -384,12 +367,11 @@
     "    \n",
     "    if os.path.exists(os.path.join(data_path, 'CPA_results_pcc_all.pickle')):\n",
     "        with open(os.path.join(data_path, \"CPA_results_pcc_all.pickle\"), \"rb\") as file:\n",
-    "            cpa_mse_dict, cpa_pearsonr_dict = pickle.load(file)\n",
-    "        return cpa_mse_dict, cpa_pearsonr_dict\n",
+    "            cpa_pearsonr_dict = pickle.load(file)\n",
+    "        return cpa_pearsonr_dict\n",
     "\n",
     "    down = nonTFs\n",
     "    down = np.concatenate([TFs, nonTFs])\n",
-    "    cpa_mse_dict = {'single':[], 'combo_seen0':[], 'combo_seen1':[], 'combo_seen2':[]}\n",
     "    cpa_pearsonr_dict = {'single':[], 'combo_seen0':[], 'combo_seen1':[], 'combo_seen2':[]}\n",
     "    with open(os.path.join(data_path, 'splits', \"data_simulation_1_0.75_subgroup.pkl\"), \"rb\") as file:\n",
     "        subgroups = pickle.load(file)\n",
@@ -501,14 +483,10 @@
     "            pred_deg = pred.filter(down)\n",
     "            truth_deg = truth.filter(down)\n",
     "            ctrl_deg = ctrl.filter(down)\n",
-    "            res_mse = mse(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
-    "                          truth_deg.values.flatten() - ctrl_deg.values.flatten())\n",
     "            res_pearsonr = pearsonr(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
     "                                    truth_deg.values.flatten() - ctrl_deg.values.flatten())[0]\n",
     "        else:\n",
-    "            res_mse = np.nan\n",
     "            res_pearsonr = np.nan\n",
-    "        cpa_mse_dict['single'].append(res_mse)\n",
     "        cpa_pearsonr_dict['single'].append(res_pearsonr)\n",
     "    for key in ['combo_seen0', 'combo_seen1', 'combo_seen2']:\n",
     "        for combo in test_subgroup[key]:\n",
@@ -524,19 +502,15 @@
     "                pred_deg = pred.filter(down)\n",
     "                truth_deg = truth.filter(down)\n",
     "                ctrl_deg = ctrl.filter(down)\n",
-    "                res_mse = mse(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
-    "                              truth_deg.values.flatten() - ctrl_deg.values.flatten())\n",
     "                res_pearsonr = pearsonr(pred_deg.values.flatten() - ctrl_deg.values.flatten(),\n",
     "                                        truth_deg.values.flatten() - ctrl_deg.values.flatten())[0]\n",
     "            else:\n",
-    "                res_mse = np.nan\n",
     "                res_pearsonr = np.nan\n",
-    "            cpa_mse_dict[key].append(res_mse)\n",
     "            cpa_pearsonr_dict[key].append(res_pearsonr)\n",
     "\n",
     "    with open(os.path.join(data_path, \"CPA_results_pcc_all.pickle\"), \"wb\") as file:\n",
-    "        pickle.dump((cpa_mse_dict, cpa_pearsonr_dict), file)\n",
-    "    return cpa_mse_dict, cpa_pearsonr_dict"
+    "        pickle.dump(cpa_pearsonr_dict, file)\n",
+    "    return cpa_pearsonr_dict"
    ]
   },
   {
@@ -621,15 +595,12 @@
     "                       'combo_seen0_train': pairs_to_pert_seen0_train, 'combo_seen0': pairs_to_pert_seen0_test,\n",
     "                       'combo_seen1_train': pairs_to_pert_seen1_train, 'combo_seen1': pairs_to_pert_seen1_test,\n",
     "                       'combo_seen2_train': pairs_to_pert_seen2_train, 'combo_seen2': pairs_to_pert_seen2_test}\n",
-    "    CauTrigger_mse_dict, CauTrigger_pearsonr_dict = run_ct(data_path, train_test_dict, norman_adata, TFs, nonTFs)\n",
-    "    GEARS_mse_dict, GEARS_pearsonr_dict= run_gears(data_path, norman_adata, TFs, nonTFs)\n",
-    "    cpa_mse_dict, cpa_pearsonr_dict = run_cpa(data_path, norman_adata, TFs, nonTFs)\n",
+    "    CauTrigger_pearsonr_dict = run_ct(data_path, train_test_dict, norman_adata, TFs, nonTFs)\n",
+    "    GEARS_pearsonr_dict= run_gears(data_path, norman_adata, TFs, nonTFs)\n",
+    "    cpa_pearsonr_dict = run_cpa(data_path, norman_adata, TFs, nonTFs)\n",
     "    cpa_pearsonr_dict['all'] = np.concatenate(list(cpa_pearsonr_dict.values()))\n",
     "    CauTrigger_pearsonr_dict['all'] = np.concatenate(list(CauTrigger_pearsonr_dict.values()))\n",
     "    GEARS_pearsonr_dict['all'] = np.concatenate(list(GEARS_pearsonr_dict.values()))\n",
-    "    cpa_mse_dict['all'] = np.concatenate(list(cpa_mse_dict.values()))\n",
-    "    CauTrigger_mse_dict['all'] = np.concatenate(list(CauTrigger_mse_dict.values()))\n",
-    "    GEARS_mse_dict['all'] = np.concatenate(list(GEARS_mse_dict.values()))\n",
     "    data = []\n",
     "    methods = ['CauTrigger', 'GEARS', 'CPA']\n",
     "    for method in methods:\n",
