--- a/tutorials/BenchmarkSimulation2L Hard.ipynb
+++ b/tutorials/BenchmarkSimulation2L Hard.ipynb
@@ -1,9 +1,13 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# ===== Benchmark Script for Two-Layer Causal Simulation =====\n",
     "# Goal: Evaluate layer-wise causal feature identification\n",
@@ -47,9 +51,7 @@
     "plt.rcParams['pdf.fonttype'] = 42\n",
     "plt.rcParams['font.sans-serif'] = ['Arial']\n",
     "plt.rcParams['font.family'] = 'sans-serif'"
-   ],
-   "id": "1f0c53b39f316a20",
-   "outputs": []
+   ]
   },
   {
    "metadata": {},
@@ -189,7 +191,7 @@
     "        \"all\": df_all\n",
     "    }"
    ],
-   "id": "769d7ad5cc3362e"
+   "id": "9448d3502d9ebfb0"
   },
   {
    "metadata": {},
@@ -683,7 +685,7 @@
     "\n",
     "    return normalized_arr"
    ],
-   "id": "a2f7ebb5007ecf62"
+   "id": "2c6905552cb50b24"
   },
   {
    "metadata": {},
@@ -1262,7 +1264,7 @@
     "\n",
     "        plt.close(fig)"
    ],
-   "id": "378005dbd08d257c"
+   "id": "29d7a2eaf0436aee"
   },
   {
    "metadata": {},
@@ -1443,7 +1445,7 @@
     "        p_zero=generation_args.get(\"p_zero\", 0.2)\n",
     "    )"
    ],
-   "id": "b041ffe9b4cf96cc"
+   "id": "d41eb6b429d17ca8"
   },
   {
    "metadata": {},
@@ -1736,7 +1738,7 @@
     "    plt.close(fig)\n",
     "    print(f\"[INFO] Saved: {fname}.pdf/.png\")"
    ],
-   "id": "963f3cef4cdacd4"
+   "id": "a6a9937dbdf3a95a"
   },
   {
    "metadata": {},
@@ -1850,10 +1852,28 @@
     "        simulate_single_cell=simulate_single_cell\n",
     "    )"
    ],
-   "id": "d3c4b6a3a01e9e81"
+   "id": "e6ee4c2ced507bc"
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
