--- a/tutorials/BenchmarkSimulation2L.ipynb
+++ b/tutorials/BenchmarkSimulation2L.ipynb
@@ -1,9 +1,13 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# ===== Benchmark Script for Two-Layer Causal Simulation =====\n",
     "# Goal: Evaluate layer-wise causal feature identification\n",
@@ -47,13 +51,12 @@
     "plt.rcParams['pdf.fonttype'] = 42\n",
     "plt.rcParams['font.sans-serif'] = ['Arial']\n",
     "plt.rcParams['font.family'] = 'sans-serif'"
-   ],
-   "id": "a1dea50a14ee739f",
-   "outputs": []
+   ]
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
    "execution_count": null,
    "source": [
     "def run_CauTrigger(adata, output_dir=None, mode=\"SHAP\", topk=20, is_log1p=False, full_input=False):\n",
@@ -153,8 +156,7 @@
     "        \"layer2\": df_layer2,\n",
     "    }"
    ],
-   "id": "33f6b2c6b7a2a5a9",
-   "outputs": []
+   "id": "4a27de3cc33f0a1e"
   },
   {
    "metadata": {},
@@ -632,7 +634,7 @@
     "\n",
     "    return normalized_arr"
    ],
-   "id": "4e568e9a0379143f"
+   "id": "51a88c095c105a97"
   },
   {
    "metadata": {},
@@ -1061,7 +1063,7 @@
     "\n",
     "        plt.close(fig)"
    ],
-   "id": "af343b496523dab1"
+   "id": "d9cd0fd632584cd2"
   },
   {
    "metadata": {},
@@ -1241,7 +1243,7 @@
     "        p_zero=generation_args.get(\"p_zero\", 0.2)\n",
     "    )"
    ],
-   "id": "58a3a45ab42e95d9"
+   "id": "4e432f4d0e082cf6"
   },
   {
    "metadata": {},
@@ -1322,10 +1324,52 @@
     "        simulate_single_cell=simulate_single_cell\n",
     "    )"
    ],
-   "id": "d3c4b6a3a01e9e81"
+   "id": "dfe44c0e188aee33"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "5aafdc6afd4d220c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "cb7f94f2c624509f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c30ee3a3b2c9c7d"
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
